# mop

./: README.txt
bundle_adjustment/: CMakeLists.txt  Results.txt  bal.cpp  synthetic.cpp  test_algorithm.cpp  test_initBA.cpp  tips_sba.txt
core/: BALOptimizer.cpp  BALOptimizer.hpp  BALReader.cpp  BALReader.hpp  CameraPose.cpp  CameraPose.hpp  Common.cpp  Common.hpp  DOTWriter.hpp  Debug.hpp  DepthProjection.cpp  DepthProjection.hpp  DotWriter.hpp  Doxyfile  FeaturesCV.cpp  FeaturesCV.hpp  FeaturesEDM.cpp  FeaturesEDM.hpp  FeaturesFunctions.cpp  FeaturesFunctions.hpp  FeaturesMap.cpp  FeaturesMap.hpp  FrameSelector.cpp  FrameSelector.hpp  GlobalOptimizerSfM.cpp  GlobalOptimizerSfM.hpp  GlobalPose3D.cpp  GlobalPose3D.hpp  GraphBFS.hpp  GraphPose.cpp  GraphPose.hpp  HandleDB.cpp  HandleDB.hpp  IncrementalOptimizer.cpp  IncrementalOptimizer.hpp  Interface.cpp  Interface.hpp  InterfacePCL.cpp  InterfacePCL.hpp  LinearEstimator.hpp  (+35 more)
core/octave/: cameraMatrix.m  costFundamental.m  costFundamentalM.m  costQuaternion.m  crossMatrix.m  derivativeFundamental.m  ex_plot_track_real.m  ex_plot_track_syn.m  fundamentalMatrix.m  fundamentalMatrixM.m  linearTriangulation.m  linearTriangulationMV.m  linearTriangulation_normalized.m  liu_HartleySturm.m  normalizeData.m  normalizeHomogeneous.m  numericDerivativeQ.m  optimalTriangulation.m  optimalTriangulation_point.m  plot_camera.m  plot_camera_set.m  plot_track.m  posefrom3Dpoints.m  posefromFundamental.m  quaternion.m  quaternion2angles.m  quaternion2rotation.m  quaternionconjugate.m  quaternionnorm.m  quaternionproduct.m  rotation.m  rotation2angles.m  rotation2quaternion.m  rotationwithquaternion.m  rotationwithquaternionexplicit.m  scalefromTranslations.m  selectRandT.m  testTriangulation.m  test_posefrom3Dpoints.m  test_synthetic.m
core/octave/data/: pts1_studio335.txt  pts2_studio386.txt  synthetic_test_findingT.m  synthetic_testdata2.txt  testTriangulation2.m  test_paired_studio335_386.m  test_synthetic.m  test_triangulation_online_eg.m
core/octave/plot/real/: gin_rot_lin.txt  gin_rot_opt.txt  gin_tr_lin.txt  gin_tr_opt.txt
core/octave/plot/synthetic/: syn_rot144.txt  syn_rot36.txt  syn_rot_lin144.txt  syn_rot_lin36.txt  syn_rot_opt144.txt  syn_rot_opt36.txt  syn_tr144.txt  syn_tr36.txt  syn_tr_lin144.txt  syn_tr_lin36.txt  syn_tr_opt144.txt  syn_tr_opt36.txt
range3d/: CMakeLists.txt  capture_pcd.cpp  frame.cpp  image2pcd.cpp  range_model.cpp  sparse2dense.cpp  synthetic_range.cpp  test_cloud.cpp
